Game logic is done, moving on to unity soon

--- a/2048_Game/2048_Game.csproj
+++ b/2048_Game/2048_Game.csproj
@@ -33,6 +33,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Free_Location.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
